<resources>
    <string name="app_name">LlenamosLaMochila</string>
    <string name="str_contenido">Contenido: </string>
    <string name="cb_gorras">Gorras</string>
    <string name="cb_bañadores">Bañadores</string>
    <string name="cb_camisetas">Camisetas</string>
    <string name="cb_zapatos">Zapatos</string>
    <string name="cb_pantalones">Pantalones</string>
    <string name="cb_libros">Libros</string>
    <string name="btn_vaciarMochila">VACIAR MOCHILA</string>
</resources>